navbar collapse properties adjusted, application.html.erb file updated with correct bootstrap links (v 5.1.3), link for JS not working (disabled)

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -408,6 +408,14 @@ p a {
   color: #f3a007 !important;
 }
 
+/* Set the border color */
+          
+.custom-toggler.navbar-toggler {
+  border-color: gray;
+}
+
+
+
 /*
   ========================================
   Pagination (from will_paginate gem)
